fix broken links and font

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <title>Inferring Smooth Control</title>
   <link rel="stylesheet" href="./files/main.css">
   <link rel="stylesheet" href="./files/font.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="./files/css/academicons.min.css"/>
   <script src="https://kit.fontawesome.com/ade16df02c.js" crossorigin="anonymous"></script>
 
@@ -235,7 +238,7 @@ only screen and (max-width: 760px),
         </div>
 
         <div style="text-align: center;">
-        <button onclick="window.location.href='https://openreview.net/forum?id=HbGgF93Ppoy;">
+        <button onclick="window.location.href='https://openreview.net/forum?id=HbGgF93Ppoy';">
         <i class="fa-solid fa-file-pdf" style="font-size: 1.1em;"></i>
         Paper
         </button>
